[package]
name = "helm-template-parser"
description = "Parser for Helm template files"
version = "0.0.3"
edition = "2024"
repository = "https://github.com/miller-time/helm-template-parser"
documentation = "https://docs.rs/helm-template-parser"
readme = "README.md"
authors = ["Russell Cousineau <miller.time.baby@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
